# rset_assessment

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.arch.yml  docker-compose.yml
.colcon/install/linear_algebra_nodes_common/lib/linear_algebra_nodes_common/: server_node
.colcon/install/linear_algebra_nodes_common/share/ament_index/resource_index/parent_prefix_path/: linear_algebra_nodes_common
.colcon/install/linear_algebra_nodes_common/share/linear_algebra_nodes_common/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
.colcon/install/linear_algebra_service/include/linear_algebra_service/linear_algebra_service/msg/: rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_introspection_c__visibility_control.h
.colcon/install/linear_algebra_service/include/linear_algebra_service/linear_algebra_service/srv/: solve_least_squares.h
.colcon/install/linear_algebra_service/include/linear_algebra_service/linear_algebra_service/srv/detail/: solve_least_squares__builder.hpp  solve_least_squares__functions.h  solve_least_squares__rosidl_typesupport_fastrtps_cpp.hpp  solve_least_squares__struct.hpp  solve_least_squares__traits.hpp  solve_least_squares__type_support.c  solve_least_squares__type_support.cpp
.colcon/install/linear_algebra_service/local/lib/python3.10/dist-packages/linear_algebra_service/: _linear_algebra_service_s.ep.rosidl_typesupport_fastrtps_c.c
.colcon/install/linear_algebra_service/local/lib/python3.10/dist-packages/linear_algebra_service/srv/: __init__.py
.colcon/install/linear_algebra_service/share/ament_index/resource_index/rosidl_interfaces/: linear_algebra_service
.colcon/install/linear_algebra_service/share/linear_algebra_service/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
.colcon/install/linear_algebra_service/share/linear_algebra_service/cmake/: ament_cmake_export_libraries-extras.cmake  export_linear_algebra_service__rosidl_generator_cExport-noconfig.cmake  export_linear_algebra_service__rosidl_generator_cExport.cmake  export_linear_algebra_service__rosidl_generator_cppExport.cmake  export_linear_algebra_service__rosidl_generator_pyExport-noconfig.cmake  export_linear_algebra_service__rosidl_generator_pyExport.cmake  export_linear_algebra_service__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  linear_algebra_serviceConfig.cmake  linear_algebra_service__rosidl_typesupport_cExport-noconfig.cmake  linear_algebra_service__rosidl_typesupport_cExport.cmake  linear_algebra_service__rosidl_typesupport_introspection_cExport-noconfig.cmake  linear_algebra_service__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
.colcon/install/linear_algebra_service/share/linear_algebra_service/srv/: SolveLeastSquares.srv  SolveLeastSquares_Response.msg
.colcon/install/sanity_pkg/share/sanity_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
.colcon/install/sanity_pkg/share/sanity_pkg/cmake/: sanity_pkgConfig.cmake
.colcon/log/: latest_build
log/: latest_list
src/Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
src/linear_algebra_nodes_common/: CMakeLists.txt  package.xml
src/linear_algebra_nodes_common/config/: client_data.yaml  matrix_vector.yaml
src/linear_algebra_nodes_common/src/: client_node.cpp  server_node.cpp
src/linear_algebra_service/: CMakeLists.txt  package.xml
src/linear_algebra_service/srv/: SolveLeastSquares.srv
src/sanity_pkg/: CMakeLists.txt
src/ur20_display/: CMakeLists.txt  package.xml
src/ur20_display/launch/: display_ur20.launch.py
src/ur20_display/rviz/: view_ur20.rviz
src/ur20_display/src/: joint_publisher_node.cpp
