<?xml version="1.0"?>
<package format="3">
  <name>linear_algebra_service</name>
  <version>0.0.0</version>
  <description>Least-squares service interface</description>
  <maintainer email="dimisf00@gmail.com">Dimitra Sofianou</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Interface deps -->
  <depend>geometry_msgs</depend>

  <!-- Runtime for generated interfaces -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- REQUIRED for packages that install .msg/.srv/.action -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>