<?xml version="1.0"?>
<package format="3">
  <name>ur20_display</name>
  <version>0.0.0</version>
  <description>Publishes UR20 joint states and listens to TF frames.</description>
  <maintainer email="dimisf00@gmail.com">Dimitra Sofianou</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build & runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>eigen3_cmake_module</depend>

  <!-- Runtime tools for launch -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <!-- Tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
